<resources>
    <string name="app_name">Make An Appointment</string>
    <string-array name="position">
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>
    <string name="MakeAnAppointment">Make an Appointment</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="WaitingList">Waiting List</string>
    <string name="DoctorName">"doctor's name: "</string>
    <string name="DoctorPro">"specialization: "</string>
    <string name="CancelAppointment">Cancel appointment</string>
    <string name="DoctorQueue">Doctor\'s Queue:</string>
    <string name="Name">name:</string>
    <string name="Age">age:</string>
    <string name="Enteryourname">Enter your name</string>
    <string name="Enteryourproficiency">Enter your specialization</string>
    <string name="UploadPic">Upload Picture</string>
    <string name="Credentials">Credentials</string>
    <string name="Enteryouremail">Enter your email</string>
    <string name="EnterYourPassword">Enter your password</string>
    <string name="SignUpAs">Sign up as:</string>
    <string name="Book">Book</string>
    <string name="Patients">Patients</string>
    <string name="Showavailable">Filter available</string>
    <string name="ShownotAvailable">Filter not Available</string>
    <string name="EnterYouremail">Enter your email</string>
    <string name="EnterYourAge">Enter your age</string>
    <string name="EnterYourPhone">Enter your phone</string>
    <string name="Doctors">Doctors</string>
    <string name="Patientss">Patients</string>


</resources>