<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/lightBlue"

    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Credentials"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:fontFamily="cursive"
        android:textColor="#55EDBD"
        android:textStyle="bold"
        android:shadowColor="#000"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="9"
        android:textSize="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_patient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector2"
            android:fontFamily="@font/delius"
            android:padding="8dp"
            android:gravity="center"
            android:hint="@string/Enteryourname"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/age_patient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/EnterYourAge"
            android:inputType="number"
            android:layout_margin="10dp"
            android:background="@drawable/selector2"
            android:fontFamily="@font/delius"
            android:padding="8dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_patient">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/EnterYourPhone"
            android:layout_margin="10dp"
            android:background="@drawable/selector2"
            android:fontFamily="@font/delius"
            android:padding="8dp"
            android:inputType="phone"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/take_picture"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/selector"
        android:fontFamily="@font/chelsea_market"
        android:text="@string/UploadPic"
        android:textColor="#FFF" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_baseline_person_24"/>

</LinearLayout>
</ScrollView>